Work for https://github.com/surveyjs/service/issues/1288 - fixed markup tests

--- a/tests/markup/snapshots/checkbox-columns-no-head-foot.snap.html
+++ b/tests/markup/snapshots/checkbox-columns-no-head-foot.snap.html
@@ -1,11 +1,10 @@
 <fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv_qcbc sv_qcbx" role="listbox">
-	<legend class="sv-hidden" role="presentation">
-	</legend>
+	<legend class="sv-hidden">Question title</legend>
 	<div>
 		<div class="sv_q_select_column sv-q-column-2" role="presentation">
 			<div class="sv_q_checkbox sv_q_checkbox_selectall" role="presentation">
 				<label class="sv_q_checkbox_label">
-					<input class="sv_q_checkbox_control_item" id="testid0i_0" name="name" type="checkbox" value="">
+					<input class="sv_q_checkbox_control_item" id="testid0i_0" name="nameselectall" role="option" type="checkbox" value="">
 					<span class="sv_q_checkbox_control_label">
 						<span class="sv-string-viewer">Select All</span>
 					</span>
@@ -13,7 +12,7 @@
 			</div>
 			<div class="sv_q_checkbox" role="presentation">
 				<label class="sv_q_checkbox_label">
-					<input class="sv_q_checkbox_control_item" id="testid0i_2" name="name" type="checkbox" value="item2">
+					<input class="sv_q_checkbox_control_item" id="testid0i_2" name="nameitem2" role="option" type="checkbox" value="item2">
 					<span class="sv_q_checkbox_control_label">
 						<span class="sv-string-viewer">item2</span>
 					</span>
@@ -21,7 +20,7 @@
 			</div>
 			<div class="sv_q_checkbox" role="presentation">
 				<label class="sv_q_checkbox_label">
-					<input class="sv_q_checkbox_control_item" id="testid0i_4" name="name" type="checkbox" value="other">
+					<input class="sv_q_checkbox_control_item" id="testid0i_4" name="nameother" role="option" type="checkbox" value="other">
 					<span class="sv_q_checkbox_control_label">
 						<span class="sv-string-viewer">Other (describe)</span>
 					</span>
@@ -31,7 +30,7 @@
 		<div class="sv_q_select_column sv-q-column-2" role="presentation">
 			<div class="sv_q_checkbox" role="presentation">
 				<label class="sv_q_checkbox_label">
-					<input class="sv_q_checkbox_control_item" id="testid0i_1" name="name" type="checkbox" value="item1">
+					<input class="sv_q_checkbox_control_item" id="testid0i_1" name="nameitem1" role="option" type="checkbox" value="item1">
 					<span class="sv_q_checkbox_control_label">
 						<span class="sv-string-viewer">item1</span>
 					</span>
@@ -39,7 +38,7 @@
 			</div>
 			<div class="sv_q_checkbox sv_q_checkbox_none" role="presentation">
 				<label class="sv_q_checkbox_label">
-					<input class="sv_q_checkbox_control_item" id="testid0i_3" name="name" type="checkbox" value="none">
+					<input class="sv_q_checkbox_control_item" id="testid0i_3" name="namenone" role="option" type="checkbox" value="none">
 					<span class="sv_q_checkbox_control_label">
 						<span class="sv-string-viewer">None</span>
 					</span>
