--- a/tests/markup/snapshots/checkbox-other-V2.snap.html
+++ b/tests/markup/snapshots/checkbox-other-V2.snap.html
@@ -1,9 +1,8 @@
 <fieldset aria-invalid="false" aria-label="name" aria-required="false" class="sd-selectbase" role="listbox">
-	<legend class="sv-hidden" role="presentation">
-	</legend>
+	<legend class="sv-hidden">name</legend>
 	<div class="sd-checkbox sd-checkbox--allowhover sd-item sd-item--allowhover sd-selectbase__item sv-q-col-1" role="presentation">
 		<label class="sd-selectbase__label">
-			<input class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0i_0" name="name" type="checkbox" value="item1">
+			<input class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0i_0" name="nameitem1" role="option" type="checkbox" value="item1">
 			<span class="sd-checkbox__decorator sd-item__decorator">
 				<svg class="sd-checkbox__svg sd-item__svg">
 					<use xlink:href="#icon-v2check" class="">
@@ -17,7 +16,7 @@
 	</div>
 	<div class="sd-checkbox sd-checkbox--checked sd-item sd-item--checked sd-selectbase__item sv-q-col-1" role="presentation">
 		<label class="sd-selectbase__label">
-			<input checked="" class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0i_1" name="name" type="checkbox" value="other">
+			<input checked="" class="sd-checkbox__control sd-item__control sd-visuallyhidden" id="testid0i_1" name="nameother" role="option" type="checkbox" value="other">
 			<span class="sd-checkbox__decorator sd-item__decorator">
 				<svg class="sd-checkbox__svg sd-item__svg">
 					<use xlink:href="#icon-v2check" class="">
