--- a/tests/markup/snapshots/imagepicker-colCount-1-v2.snap.html
+++ b/tests/markup/snapshots/imagepicker-colCount-1-v2.snap.html
@@ -1,6 +1,5 @@
 <fieldset class="sd-imagepicker sd-imagepicker--column sd-selectbase">
-	<legend aria-label="question1" role="radio">
-	</legend>
+	<legend class="sv-hidden">question1</legend>
 	<div class="sd-imagepicker__item sd-imagepicker__item--allowhover sv-q-col-1">
 		<label class="sd-imagepicker__label">
 			<input aria-invalid="false" aria-label="question1" aria-required="false" class="sd-imagepicker__control sd-visuallyhidden" id="testid0i_0" name="question1_testid0" type="radio" value="item1">
