--- a/tests/markup/snapshots/imagepicker-colCount-2-v2.snap.html
+++ b/tests/markup/snapshots/imagepicker-colCount-2-v2.snap.html
@@ -1,6 +1,5 @@
 <fieldset class="sd-imagepicker sd-selectbase">
-	<legend aria-label="question1" role="radio">
-	</legend>
+	<legend class="sv-hidden">question1</legend>
 	<div class="sd-imagepicker__column sd-selectbase__column sv-q-column-2" role="presentation">
 		<div class="sd-imagepicker__item sd-imagepicker__item--allowhover">
 			<label class="sd-imagepicker__label">
