--- a/tests/markup/snapshots/imagepicker-multi.snap.html
+++ b/tests/markup/snapshots/imagepicker-multi.snap.html
@@ -1,6 +1,5 @@
 <fieldset class="sv_imgsel">
-	<legend aria-label="question1" role="radio">
-	</legend>
+	<legend class="sv-hidden">question1</legend>
 	<div class="sv_q_imagepicker_inline sv_q_imgsel">
 		<label class="sv_q_imgsel_label">
 			<input aria-invalid="false" aria-label="question1" aria-required="false" class="sv_q_imgsel_control_item" id="testid0i_0" name="question1_testid0" type="checkbox" value="item1">
