--- a/tests/markup/snapshots/matrix-modern.snap.html
+++ b/tests/markup/snapshots/matrix-modern.snap.html
@@ -1,7 +1,6 @@
 <div class="sv-matrix">
 	<fieldset>
-		<legend aria-label="matrix">
-		</legend>
+		<legend class="sv-hidden">matrix</legend>
 		<table class="sv-matrix-root sv-table">
 			<thead>
 				<tr>
