--- a/tests/markup/snapshots/matrix-widths.snap.html
+++ b/tests/markup/snapshots/matrix-widths.snap.html
@@ -1,7 +1,6 @@
 <div>
 	<fieldset>
-		<legend aria-label="matrix">
-		</legend>
+		<legend class="sv-hidden">matrix</legend>
 		<table class="sv_q_matrix">
 			<thead>
 				<tr>
