--- a/tests/markup/snapshots/checkbox-modern.snap.html
+++ b/tests/markup/snapshots/checkbox-modern.snap.html
@@ -1,9 +1,8 @@
 <fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv-selectbase" role="listbox">
-	<legend class="sv-hidden" role="presentation">
-	</legend>
+	<legend class="sv-hidden">Question title</legend>
 	<div class="sv-checkbox sv-checkbox--allowhover sv-item sv-q-col-1 sv-selectbase__item" role="presentation">
 		<label class="sv-selectbase__label">
-			<input class="sv-item__control sv-visuallyhidden" id="testid0i_0" name="name" type="checkbox" value="item1">
+			<input class="sv-item__control sv-visuallyhidden" id="testid0i_0" name="nameitem1" role="option" type="checkbox" value="item1">
 			<span class="sv-checkbox__decorator sv-item__decorator sv-selectbase__decorator">
 				<svg class="sv-checkbox__svg sv-item__svg">
 					<use xlink:href="#icon-moderncheck" class="">
@@ -17,7 +16,7 @@
 	</div>
 	<div class="sv-checkbox sv-checkbox--allowhover sv-item sv-q-col-1 sv-selectbase__item" role="presentation">
 		<label class="sv-selectbase__label">
-			<input class="sv-item__control sv-visuallyhidden" id="testid0i_1" name="name" type="checkbox" value="item2">
+			<input class="sv-item__control sv-visuallyhidden" id="testid0i_1" name="nameitem2" role="option" type="checkbox" value="item2">
 			<span class="sv-checkbox__decorator sv-item__decorator sv-selectbase__decorator">
 				<svg class="sv-checkbox__svg sv-item__svg">
 					<use xlink:href="#icon-moderncheck" class="">
