--- a/tests/markup/snapshots/checkbox-other-maxlength.snap.html
+++ b/tests/markup/snapshots/checkbox-other-maxlength.snap.html
@@ -1,9 +1,8 @@
 <fieldset aria-invalid="false" aria-label="name" aria-required="false" class="sv_qcbc sv_qcbx" role="listbox">
-	<legend class="sv-hidden" role="presentation">
-	</legend>
+	<legend class="sv-hidden">name</legend>
 	<div class="checked sv_q_checkbox sv-q-col-1" role="presentation">
 		<label class="sv_q_checkbox_label">
-			<input checked="" class="sv_q_checkbox_control_item" id="testid0i_0" name="name" type="checkbox" value="other">
+			<input checked="" class="sv_q_checkbox_control_item" id="testid0i_0" name="nameother" role="option" type="checkbox" value="other">
 			<span class="sv_q_checkbox_control_label">
 				<span class="sv-string-viewer">Other (describe)</span>
 			</span>
