--- a/tests/markup/snapshots/checkbox.snap.html
+++ b/tests/markup/snapshots/checkbox.snap.html
@@ -1,9 +1,8 @@
 <fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv_qcbc sv_qcbx" role="listbox">
-	<legend class="sv-hidden" role="presentation">
-	</legend>
+	<legend class="sv-hidden">Question title</legend>
 	<div class="sv_q_checkbox sv-q-col-1" role="presentation">
 		<label class="sv_q_checkbox_label">
-			<input class="sv_q_checkbox_control_item" id="testid0i_0" name="name" type="checkbox" value="item1">
+			<input class="sv_q_checkbox_control_item" id="testid0i_0" name="nameitem1" role="option" type="checkbox" value="item1">
 			<span class="sv_q_checkbox_control_label">
 				<span class="sv-string-viewer">item1</span>
 			</span>
@@ -11,7 +10,7 @@
 	</div>
 	<div class="sv_q_checkbox sv-q-col-1" role="presentation">
 		<label class="sv_q_checkbox_label">
-			<input class="sv_q_checkbox_control_item" id="testid0i_1" name="name" type="checkbox" value="item2">
+			<input class="sv_q_checkbox_control_item" id="testid0i_1" name="nameitem2" role="option" type="checkbox" value="item2">
 			<span class="sv_q_checkbox_control_label">
 				<span class="sv-string-viewer">item2</span>
 			</span>
@@ -19,7 +18,7 @@
 	</div>
 	<div class="sv_q_checkbox sv-q-col-1" role="presentation">
 		<label class="sv_q_checkbox_label">
-			<input class="sv_q_checkbox_control_item" id="testid0i_2" name="name" type="checkbox" value="item3">
+			<input class="sv_q_checkbox_control_item" id="testid0i_2" name="nameitem3" role="option" type="checkbox" value="item3">
 			<span class="sv_q_checkbox_control_label">
 				<span class="sv-string-viewer">item3</span>
 			</span>
