--- a/tests/markup/snapshots/dropdown-input-string.snap.html
+++ b/tests/markup/snapshots/dropdown-input-string.snap.html
@@ -9,7 +9,7 @@
 					<span style="visibility:hidden;">o</span>
 					<span>rd</span>
 				</div>
-				<input aria-controls="testid0i_list" aria-expanded="true" autocomplete="off" class="sv_q_dropdown__filter-string-input" inputmode="text" placeholder="" role="combobox" type="text">
+				<input aria-controls="testid0i_list" aria-expanded="true" aria-label="Question title" autocomplete="off" class="sv_q_dropdown__filter-string-input" inputmode="text" placeholder="" role="combobox" type="text">
 			</div>
 			<div class="sv_q_dropdown_clean-button" style="display:none;">
 				<svg aria-label="Clear" class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
