--- a/tests/markup/snapshots/file-mob2-zip-png.snap.html
+++ b/tests/markup/snapshots/file-mob2-zip-png.snap.html
@@ -9,14 +9,14 @@
 				<div class="sd-action-bar sd-file__actions-container">
 					<div class="sv-action" id="sv-file-choose-file">
 						<div class="sv-action__content">
-							<label aria-label="Select File" class="sd-context-btn sd-file__choose-btn sd-file__choose-btn--icon" role="button" tabindex="0">
+							<div aria-label="Select File" class="sd-context-btn sd-file__choose-btn sd-file__choose-btn--icon" role="button" tabindex="0">
 								<svg aria-label="Select File" class="sv-svg-icon" role="img">
 									<use xlink:href="#icon-choosefile" class="">
 									</use>
 									<title class="">Select File</title>
 								</svg>
 								<span>Select File</span>
-							</label>
+							</div>
 						</div>
 					</div>
 					<div class="sv-action sv-action--hidden" id="sv-file-start-camera">
