--- a/tests/markup/snapshots/imagepicker-no-image-v2.snap.html
+++ b/tests/markup/snapshots/imagepicker-no-image-v2.snap.html
@@ -1,6 +1,5 @@
 <fieldset class="sd-imagepicker sd-selectbase">
-	<legend aria-label="question1" role="radio">
-	</legend>
+	<legend class="sv-hidden">question1</legend>
 	<div class="sd-imagepicker__item sd-imagepicker__item--allowhover sd-imagepicker__item--inline">
 		<label class="sd-imagepicker__label">
 			<input aria-invalid="false" aria-label="question1" aria-required="false" class="sd-imagepicker__control sd-visuallyhidden" disabled="" id="testid0i_0" name="question1_testid0" type="radio" value="item1">
