--- a/tests/markup/snapshots/matrix-empty.snap.html
+++ b/tests/markup/snapshots/matrix-empty.snap.html
@@ -1,14 +1,19 @@
 <div>
 	<fieldset>
-		<legend aria-label="matrix"></legend>
+		<legend class="sv-hidden">matrix</legend>
 		<table class="sv_q_matrix">
 			<thead>
 				<tr>
-					<th><span class="sv-string-viewer">col_1</span></th>
-					<th><span class="sv-string-viewer">col_2</span></th>
+					<th>
+						<span class="sv-string-viewer">col_1</span>
+					</th>
+					<th>
+						<span class="sv-string-viewer">col_2</span>
+					</th>
 				</tr>
 			</thead>
-			<tbody></tbody>
+			<tbody>
+			</tbody>
 		</table>
 	</fieldset>
 </div>
