--- a/tests/markup/snapshots/matrix-v2.snap.html
+++ b/tests/markup/snapshots/matrix-v2.snap.html
@@ -1,7 +1,6 @@
 <div class="sd-matrix sd-table-wrapper">
 	<fieldset>
-		<legend aria-label="matrix">
-		</legend>
+		<legend class="sv-hidden">matrix</legend>
 		<table class="sd-matrix__table sd-table sd-table--align-middle">
 			<thead>
 				<tr>
