--- a/tests/markup/snapshots/radiogroup-modern.snap.html
+++ b/tests/markup/snapshots/radiogroup-modern.snap.html
@@ -1,7 +1,7 @@
 <fieldset aria-invalid="false" aria-label="Question title" aria-required="false" class="sv-selectbase" role="radiogroup">
 	<div class="sv-item sv-q-col-1 sv-radio sv-radio--allowhover sv-selectbase__item" role="presentation">
 		<label class="sv-selectbase__label">
-			<input class="sv-item__control sv-visuallyhidden" id="testid0i_0" name="name_testid0" type="radio" value="item1">
+			<input class="sv-item__control sv-visuallyhidden" id="testid0i_0" name="name_testid0item1" type="radio" value="item1">
 			<span class="sv-item__decorator sv-radio__decorator sv-selectbase__decorator">
 				<svg class="sv-item__svg sv-radio__svg">
 					<use xlink:href="#icon-modernradio" class="">
@@ -15,7 +15,7 @@
 	</div>
 	<div class="sv-item sv-q-col-1 sv-radio sv-radio--allowhover sv-selectbase__item" role="presentation">
 		<label class="sv-selectbase__label">
-			<input class="sv-item__control sv-visuallyhidden" id="testid0i_1" name="name_testid0" type="radio" value="item2">
+			<input class="sv-item__control sv-visuallyhidden" id="testid0i_1" name="name_testid0item2" type="radio" value="item2">
 			<span class="sv-item__decorator sv-radio__decorator sv-selectbase__decorator">
 				<svg class="sv-item__svg sv-radio__svg">
 					<use xlink:href="#icon-modernradio" class="">
