Work for https://github.com/surveyjs/service/issues/1288 - fixed keyboard nav in radio group f-test

--- a/tests/markup/snapshots/matrixdynamic-show-in-multiple-columns-mobile.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-show-in-multiple-columns-mobile.snap.html
@@ -28,7 +28,7 @@
 						<fieldset aria-invalid="false" aria-label="col1" aria-required="true" class="sd-selectbase sd-selectbase--row" role="radiogroup">
 							<div class="sd-item sd-item--allowhover sd-radio sd-radio--allowhover sd-selectbase__item sd-selectbase__item--inline" role="presentation">
 								<label class="sd-selectbase__label">
-									<input class="sd-item__control sd-radio__control sd-visuallyhidden" id="testid0row1cell1i_0" name="col1_testid0row1cell1Item 1" type="radio" value="Item 1">
+									<input class="sd-item__control sd-radio__control sd-visuallyhidden" id="testid0row1cell1i_0" name="col1_testid0row1cell1" type="radio" value="Item 1">
 									<span class="sd-item__decorator sd-radio__decorator">
 									</span>
 									<span class="sd-item__control-label">
