work for #7178 Dropdown (Standalone and Within Matrices) - Add an option to fully display long choice texts

--- a/tests/markup/snapshots/dropdown-input-string.snap.html
+++ b/tests/markup/snapshots/dropdown-input-string.snap.html
@@ -32,17 +32,17 @@
 										</div>
 										<ul class="sv-list sv-list--filtering" role="listbox">
 											<li aria-selected="false" class="sv-list__item sv-list__item--focused" role="option" tabindex="0">
-												<div class="sv-list__item-body" style="padding-inline-start:16px;">
+												<div class="sv-list__item-body" style="padding-inline-start:16px;" title="Ford">
 													<span class="sv-string-viewer">Ford</span>
 												</div>
 											</li>
 											<li aria-selected="false" class="sv-list__item" role="option" style="display:none;" tabindex="0">
-												<div class="sv-list__item-body" style="padding-inline-start:16px;">
+												<div class="sv-list__item-body" style="padding-inline-start:16px;" title="Vauxhall">
 													<span class="sv-string-viewer">Vauxhall</span>
 												</div>
 											</li>
 											<li aria-selected="false" class="sv-list__item" role="option" tabindex="0">
-												<div class="sv-list__item-body" style="padding-inline-start:16px;">
+												<div class="sv-list__item-body" style="padding-inline-start:16px;" title="Volkswagen">
 													<span class="sv-string-viewer">Volkswagen</span>
 												</div>
 											</li>
