--- a/tests/markup/snapshots/list-component.snap.html
+++ b/tests/markup/snapshots/list-component.snap.html
@@ -8,17 +8,17 @@
 					</div>
 					<ul class="sv-list" id="sq_100i_list" role="listbox">
 						<li aria-selected="false" class="sv-list__item" id="sq_100i_listitem1" role="option" tabindex="0">
-							<div class="sv-list__item-body" style="padding-inline-start: 16px;">
+							<div class="sv-list__item-body" style="padding-inline-start:16px;" title="item1">
 								<span class="sv-string-viewer">item1</span>
 							</div>
 						</li>
 						<li aria-selected="false" class="sv-list__item" id="sq_100i_listitem2" role="option" tabindex="0">
-							<div class="sv-list__item-body" style="padding-inline-start: 16px;">
+							<div class="sv-list__item-body" style="padding-inline-start:16px;" title="item2">
 								<span class="sv-string-viewer">item2</span>
 							</div>
 						</li>
 						<li aria-selected="false" class="sv-list__item" id="sq_100i_listitem3" role="option" tabindex="0">
-							<div class="sv-list__item-body" style="padding-inline-start: 16px;">
+							<div class="sv-list__item-body" style="padding-inline-start:16px;" title="item3">
 								<span class="sv-string-viewer">item3</span>
 							</div>
 						</li>
