--- a/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
@@ -153,7 +153,7 @@
 							</div>
 						</div>
 					</td>
-					<td class="sd-table__cell sd-table__cell--actions" colspan="1" data-responsive-title="" title="">
+					<td class="sd-table__cell sd-table__cell--actions sd-table__cell-action--remove-row" colspan="1" data-responsive-title="" title="">
 						<div class="sd-action-bar">
 							<div class="sv-action" id="remove-row">
 								<div class="sv-action__content">
@@ -305,7 +305,7 @@
 							</div>
 						</div>
 					</td>
-					<td class="sd-table__cell sd-table__cell--actions" colspan="1" data-responsive-title="" title="">
+					<td class="sd-table__cell sd-table__cell--actions sd-table__cell-action--remove-row" colspan="1" data-responsive-title="" title="">
 						<div class="sd-action-bar">
 							<div class="sv-action" id="remove-row">
 								<div class="sv-action__content">
