#7185 - update markup etalons

--- a/tests/markup/snapshots/matrixdropdown-cell-errors-top.snap.html
+++ b/tests/markup/snapshots/matrixdropdown-cell-errors-top.snap.html
@@ -27,7 +27,7 @@
 					</div>
 				</td>
 			</tr>
-			<tr class="sd-table__row" data-sv-drop-target-matrix-row="testid0row1">
+			<tr class="sd-table__row sd-table__row--has-end-actions" data-sv-drop-target-matrix-row="testid0row1">
 				<td class="sd-table__cell sd-table__cell--row-text" colspan="1" data-responsive-title="row1" title="">
 					<span class="sv-string-viewer">row1</span>
 				</td>
