--- a/tests/markup/snapshots/matrixdropdown-vertical.snap.html
+++ b/tests/markup/snapshots/matrixdropdown-vertical.snap.html
@@ -13,7 +13,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr class="sd-table__row sd-table__row--expanded sd-table__row--has-panel">
+			<tr class="sd-table__row sd-table__row--expanded sd-table__row--has-end-actions sd-table__row--has-panel">
 				<td class="sd-table__cell sd-table__cell--column-title sd-table__cell--row-text" colspan="1" data-responsive-title="" title="">
 					<span class="sv-string-viewer">
 					</span>
@@ -29,7 +29,7 @@
 					</div>
 				</td>
 			</tr>
-			<tr class="sd-table__row sd-table__row--expanded sd-table__row--has-panel">
+			<tr class="sd-table__row sd-table__row--expanded sd-table__row--has-end-actions sd-table__row--has-panel">
 				<td class="sd-table__cell sd-table__cell--column-title sd-table__cell--row-text" colspan="1" data-responsive-title="" title="">
 					<span class="sv-string-viewer">
 					</span>
