--- a/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
@@ -17,7 +17,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr class="sd-table__row" data-sv-drop-target-matrix-row="testid0row1">
+				<tr class="sd-table__row sd-table__row--has-end-actions" data-sv-drop-target-matrix-row="testid0row1">
 					<td class="sd-table__cell" colspan="1" data-responsive-title="Column 1" title="Column 1">
 						<div class="sd-table__question-wrapper">
 							<div class="sd-selectbase">
@@ -169,7 +169,7 @@
 						</div>
 					</td>
 				</tr>
-				<tr class="sd-table__row" data-sv-drop-target-matrix-row="testid0row3">
+				<tr class="sd-table__row sd-table__row--has-end-actions" data-sv-drop-target-matrix-row="testid0row3">
 					<td class="sd-table__cell" colspan="1" data-responsive-title="Column 1" title="Column 1">
 						<div class="sd-table__question-wrapper">
 							<div class="sd-selectbase">
