Matrix for mobile (details) #7185

--- a/tests/markup/snapshots/matrixdropdown.snap.html
+++ b/tests/markup/snapshots/matrixdropdown.snap.html
@@ -15,7 +15,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr class="sd-table__row sd-table__row--has-end-actions" data-sv-drop-target-matrix-row="testid0row1">
+			<tr class="sd-table__row" data-sv-drop-target-matrix-row="testid0row1">
 				<td class="sd-table__cell sd-table__cell--row-text" colspan="1" data-responsive-title="Row 1" title="">
 					<span class="sv-string-viewer">Row 1</span>
 				</td>
@@ -30,7 +30,7 @@
 					</div>
 				</td>
 			</tr>
-			<tr class="sd-table__row sd-table__row--has-end-actions" data-sv-drop-target-matrix-row="testid0row3">
+			<tr class="sd-table__row" data-sv-drop-target-matrix-row="testid0row3">
 				<td class="sd-table__cell sd-table__cell--row-text" colspan="1" data-responsive-title="Row 2" title="">
 					<span class="sv-string-viewer">Row 2</span>
 				</td>
