--- a/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
@@ -1,6 +1,6 @@
 <div>
 	<div class="sd-table-wrapper">
-		<table class="sd-matrixdynamic sd-table">
+		<table class="sd-matrixdynamic sd-table sd-table--has-footer">
 			<thead>
 				<tr>
 					<th class="sd-table__cell sd-table__cell--column-title sd-table__cell--dropdown sd-table__cell--header">
@@ -17,7 +17,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr class="sd-table__row" data-sv-drop-target-matrix-row="testid0row1">
+				<tr class="sd-table__row sd-table__row--has-end-actions" data-sv-drop-target-matrix-row="testid0row1">
 					<td class="sd-table__cell" colspan="1" data-responsive-title="Column 1" title="Column 1">
 						<div class="sd-table__question-wrapper">
 							<div class="sd-selectbase">
@@ -153,7 +153,7 @@
 							</div>
 						</div>
 					</td>
-					<td class="sd-table__cell sd-table__cell--actions" colspan="1" data-responsive-title="" title="">
+					<td class="sd-table__cell sd-table__cell--actions sd-table__cell-action--remove-row" colspan="1" data-responsive-title="" title="">
 						<div class="sd-action-bar">
 							<div class="sv-action" id="remove-row">
 								<div class="sv-action__content">
@@ -169,7 +169,7 @@
 						</div>
 					</td>
 				</tr>
-				<tr class="sd-table__row" data-sv-drop-target-matrix-row="testid0row3">
+				<tr class="sd-table__row sd-table__row--has-end-actions" data-sv-drop-target-matrix-row="testid0row3">
 					<td class="sd-table__cell" colspan="1" data-responsive-title="Column 1" title="Column 1">
 						<div class="sd-table__question-wrapper">
 							<div class="sd-selectbase">
@@ -305,7 +305,7 @@
 							</div>
 						</div>
 					</td>
-					<td class="sd-table__cell sd-table__cell--actions" colspan="1" data-responsive-title="" title="">
+					<td class="sd-table__cell sd-table__cell--actions sd-table__cell-action--remove-row" colspan="1" data-responsive-title="" title="">
 						<div class="sd-action-bar">
 							<div class="sv-action" id="remove-row">
 								<div class="sv-action__content">
