Fix file issues
 - Fix camera takes wrong width and height properties
 - Fix imageHeight/imageWidth behaviour for multiple preview
 - Fix actions are not visible in design mode
 - Fix choose button is not clickable
 - Fix empty space under image on mobile

--- a/tests/markup/snapshots/file-image-size.snap.html
+++ b/tests/markup/snapshots/file-image-size.snap.html
@@ -6,9 +6,9 @@
 				<span class="sv-string-viewer">Drag and drop a file here or click the button below to select a file to upload.</span>
 			</span>
 			<div>
-				<div aria-label="Replace file" class="sv_q_file_choose_button" role="button" tabindex="0">
+				<label aria-label="Replace file" class="sv_q_file_choose_button" tabindex="0">
 					<span>Replace file</span>
-				</div>
+				</label>
 			</div>
 		</div>
 		<button class="sv_q_file_remove_button" type="button">
