--- a/tests/markup/snapshots/file-2-zip.snap.html
+++ b/tests/markup/snapshots/file-2-zip.snap.html
@@ -9,14 +9,14 @@
 				<div class="sd-action-bar sd-file__actions-container">
 					<div class="sv-action" id="sv-file-choose-file">
 						<div class="sv-action__content">
-							<div aria-label="Replace file" class="sd-context-btn sd-file__choose-btn sd-file__choose-btn--icon" role="button" tabindex="0">
+							<label aria-label="Replace file" class="sd-context-btn sd-file__choose-btn sd-file__choose-btn--icon" tabindex="0">
 								<svg aria-label="Replace file" class="sv-svg-icon" role="img">
 									<use xlink:href="#icon-choosefile" class="">
 									</use>
 									<title class="">Replace file</title>
 								</svg>
 								<span>Replace file</span>
-							</div>
+							</label>
 						</div>
 					</div>
 					<div class="sv-action sv-action--hidden" id="sv-file-start-camera">
@@ -46,7 +46,7 @@
 		</div>
 		<div class="sd-file__list">
 			<span class="sd-file__preview">
-				<div class="sd-file__image-wrapper">
+				<div class="sd-file__image-wrapper sd-file__image-wrapper--default-image">
 					<svg class="sd-file__default-image sv-svg-icon" role="img">
 						<use xlink:href="#icon-defaultfile" class="">
 						</use>
