--- a/tests/markup/snapshots/file-zip.snap.html
+++ b/tests/markup/snapshots/file-zip.snap.html
@@ -6,9 +6,9 @@
 				<span class="sv-string-viewer">Drag and drop a file here or click the button below to select a file to upload.</span>
 			</span>
 			<div>
-				<div aria-label="Replace file" class="sv_q_file_choose_button" role="button" tabindex="0">
+				<label aria-label="Replace file" class="sv_q_file_choose_button" tabindex="0">
 					<span>Replace file</span>
-				</div>
+				</label>
 			</div>
 		</div>
 		<button class="sv_q_file_remove_button" type="button">
