--- a/tests/markup/snapshots/matrixdynamic-totals.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-totals.snap.html
@@ -16,9 +16,9 @@
 						<div>
 							<div>
 								<div class="sv_select_wrapper">
-									<div aria-controls="testid0row1cell0i_list" aria-expanded="false" aria-invalid="false" aria-label="Column 1" aria-required="false" class="sv_q_dropdown_control" id="testid0row1cell0i" role="combobox">
+									<div aria-controls="testid0row1cell0i_list" aria-expanded="false" aria-invalid="false" aria-label="Column 1" aria-required="false" class="sv_q_dropdown_control" role="combobox">
 										<div class="sv_q_dropdown__value">
-											<input aria-controls="testid0row1cell0i_list" aria-expanded="false" aria-label="Column 1" autocomplete="off" class="sv_q_dropdown__filter-string-input" id="testid0row1cell0i_0" inputmode="text" placeholder="Select..." role="combobox" type="text">
+											<input aria-controls="testid0row1cell0i_list" aria-expanded="false" aria-label="Column 1" autocomplete="off" class="sv_q_dropdown__filter-string-input" inputmode="text" placeholder="Select..." role="combobox" type="text">
 										</div>
 										<div class="sv_q_dropdown_clean-button" style="display:none;">
 											<svg aria-label="Clear" class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
@@ -53,7 +53,7 @@
 					</td>
 					<td class="sv_matrix_cell sv_matrix_cell_actions" colspan="1" data-responsive-title="" title="">
 						<div class="sv-action-bar sv-action-bar--default-size-mode">
-							<div class="sv-action" id="remove-row">
+							<div class="sv-action">
 								<div class="sv-action__content">
 									<button class="sv_matrix_dynamic_button" type="button">
 										<span class="sv-string-viewer">Remove</span>
@@ -70,9 +70,9 @@
 						<div>
 							<div>
 								<div class="sv_select_wrapper">
-									<div aria-controls="testid0row3cell0i_list" aria-expanded="false" aria-invalid="false" aria-label="Column 1" aria-required="false" class="sv_q_dropdown_control" id="testid0row3cell0i" role="combobox">
+									<div aria-controls="testid0row3cell0i_list" aria-expanded="false" aria-invalid="false" aria-label="Column 1" aria-required="false" class="sv_q_dropdown_control" role="combobox">
 										<div class="sv_q_dropdown__value">
-											<input aria-controls="testid0row3cell0i_list" aria-expanded="false" aria-label="Column 1" autocomplete="off" class="sv_q_dropdown__filter-string-input" id="testid0row3cell0i_0" inputmode="text" placeholder="Select..." role="combobox" type="text">
+											<input aria-controls="testid0row3cell0i_list" aria-expanded="false" aria-label="Column 1" autocomplete="off" class="sv_q_dropdown__filter-string-input" inputmode="text" placeholder="Select..." role="combobox" type="text">
 										</div>
 										<div class="sv_q_dropdown_clean-button" style="display:none;">
 											<svg aria-label="Clear" class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
@@ -107,7 +107,7 @@
 					</td>
 					<td class="sv_matrix_cell sv_matrix_cell_actions" colspan="1" data-responsive-title="" title="">
 						<div class="sv-action-bar sv-action-bar--default-size-mode">
-							<div class="sv-action" id="remove-row">
+							<div class="sv-action">
 								<div class="sv-action__content">
 									<button class="sv_matrix_dynamic_button" type="button">
 										<span class="sv-string-viewer">Remove</span>
@@ -126,6 +126,8 @@
 						<div>
 							<div>Count: 0</div>
 						</div>
+					</td>
+					<td class="sv_matrix_cell_header sv_matrix_cell--dropdown" colspan="1" data-responsive-title="" title="">
 					</td>
 				</tr>
 			</tfoot>
