--- a/tests/markup/snapshots/matrixdynamic-totals.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-totals.snap.html
@@ -127,7 +127,7 @@
 							<div>Count: 0</div>
 						</div>
 					</td>
-					<td class="sv_matrix_cell_header sv_matrix_cell--dropdown" colspan="1" data-responsive-title="" title="">
+					<td class="sv_matrix_cell_header sv_matrix_cell--action" colspan="1" data-responsive-title="" title="">
 					</td>
 				</tr>
 			</tfoot>
