Return "for" attribute in markup snapshots

--- a/tests/markup/snapshots/file-mode-camera.snap.html
+++ b/tests/markup/snapshots/file-mode-camera.snap.html
@@ -8,7 +8,7 @@
 				<div class="sd-action-bar sd-file__actions-container">
 					<div class="sv-action sv-action--hidden" id="sv-file-choose-file">
 						<div class="sv-action__content">
-							<label aria-label="Select File" class="sd-action sd-file__choose-btn sd-file__choose-btn--text" tabindex="0">
+							<label aria-label="Select File" class="sd-action sd-file__choose-btn sd-file__choose-btn--text" for="testid0i" tabindex="0">
 								<svg aria-label="Select File" class="sv-svg-icon" role="img">
 									<use xlink:href="#icon-choosefile" class="">
 									</use>
