--- a/tests/markup/snapshots/file-camera.snap.html
+++ b/tests/markup/snapshots/file-camera.snap.html
@@ -6,7 +6,7 @@
 				<span class="sv-string-viewer">Drag and drop a file here or click the button below to select a file to upload.</span>
 			</span>
 			<div>
-				<label aria-label="Select File" class="sv_q_file_choose_button" tabindex="0">
+				<label aria-label="Select File" class="sv_q_file_choose_button" for="testid0i" tabindex="0">
 					<span>Select File</span>
 				</label>
 				<span class="sv_q_file_placeholder">No file chosen</span>
