--- a/tests/markup/snapshots/file-mob2-zip-png-ro.snap.html
+++ b/tests/markup/snapshots/file-mob2-zip-png-ro.snap.html
@@ -9,7 +9,7 @@
 				<div class="sd-action-bar sd-file__actions-container">
 					<div class="sv-action" id="sv-file-choose-file">
 						<div class="sv-action__content">
-							<label aria-label="Select File" class="sd-context-btn sd-file__choose-btn sd-file__choose-btn--icon" tabindex="0">
+							<label aria-label="Select File" class="sd-context-btn sd-file__choose-btn sd-file__choose-btn--icon" for="testid0i" tabindex="0">
 								<svg aria-label="Select File" class="sv-svg-icon" role="img">
 									<use xlink:href="#icon-choosefile" class="">
 									</use>
