--- a/tests/markup/snapshots/file-modern-zip-png.snap.html
+++ b/tests/markup/snapshots/file-modern-zip-png.snap.html
@@ -6,7 +6,7 @@
 				<span class="sv-string-viewer">Drag and drop a file here or click the button below to select a file to upload.</span>
 			</span>
 			<div class="sv-file__wrapper">
-				<label aria-label="Select File" class="sv-btn sv-file__choose-btn" tabindex="0">
+				<label aria-label="Select File" class="sv-btn sv-file__choose-btn" for="testid0i" tabindex="0">
 					<span>Select File</span>
 				</label>
 			</div>
