--- a/tests/markup/snapshots/file-playing-video.snap.html
+++ b/tests/markup/snapshots/file-playing-video.snap.html
@@ -26,7 +26,7 @@
 			<div class="sv-action" id="sv-file-take-picture">
 				<div class="sv-action__content">
 					<button class="sd-context-btn sd-file__take-picture-button" role="button" tabindex="0" title="Take Photo" type="button">
-						<svg aria-label="Take Photo" class="sv-svg-icon" role="img">
+						<svg class="sv-svg-icon" role="img">
 							<use xlink:href="#icon-takepicture" class="">
 							</use>
 							<title class="">Take Photo</title>
