--- a/tests/markup/snapshots/rating-as-dropdown.snap.html
+++ b/tests/markup/snapshots/rating-as-dropdown.snap.html
@@ -24,7 +24,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="sd-dropdown_chevron-button">
+		<div aria-hidden="true" class="sd-dropdown_chevron-button">
 			<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img">
 				<use xlink:href="#icon-chevron" class="">
 				</use>
