--- a/tests/markup/snapshots/dropdown-select-clear-button.snap.html
+++ b/tests/markup/snapshots/dropdown-select-clear-button.snap.html
@@ -5,8 +5,8 @@
 				<span class="sv-string-viewer">item1</span>
 				<input aria-controls="testid0i_list" aria-expanded="false" aria-label="Question title" autocomplete="off" class="sv_q_dropdown__filter-string-input" id="testid0i_0" inputmode="text" placeholder="" role="combobox" type="text">
 			</div>
-			<div class="sv_q_dropdown_clean-button">
-				<svg aria-label="Clear" class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
+			<div class="sv_q_dropdown_clean-button" tabindex="0">
+				<svg class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
 					<use xlink:href="#icon-clear_16x16" class="">
 					</use>
 					<title class="">Clear</title>
