--- a/tests/markup/snapshots/file-2-png.snap.html
+++ b/tests/markup/snapshots/file-2-png.snap.html
@@ -10,7 +10,7 @@
 					<div class="sv-action" id="sv-file-choose-file">
 						<div class="sv-action__content">
 							<label aria-label="Replace file" class="sd-context-btn sd-file__choose-btn sd-file__choose-btn--icon" for="testid0i" tabindex="0">
-								<svg aria-label="Replace file" class="sv-svg-icon" role="img">
+								<svg class="sv-svg-icon" role="img">
 									<use xlink:href="#icon-choosefile" class="">
 									</use>
 									<title class="">Replace file</title>
@@ -22,7 +22,7 @@
 					<div class="sv-action sv-action--hidden" id="sv-file-start-camera">
 						<div class="sv-action__content">
 							<button class="sd-context-btn" role="button" tabindex="0" title="Take Photo" type="button">
-								<svg aria-label="Take Photo" class="sd-action__icon sv-svg-icon" role="img">
+								<svg class="sd-action__icon sv-svg-icon" role="img">
 									<use xlink:href="#icon-takepicture_24x24" class="">
 									</use>
 									<title class="">Take Photo</title>
@@ -33,7 +33,7 @@
 					<div class="sv-action" id="sv-file-clean">
 						<div class="sv-action__content">
 							<button class="sd-context-btn sd-context-btn--negative" role="button" tabindex="0" title="Clear" type="button">
-								<svg aria-label="Clear" class="sd-action__icon sv-svg-icon" role="img">
+								<svg class="sd-action__icon sv-svg-icon" role="img">
 									<use xlink:href="#icon-clear" class="">
 									</use>
 									<title class="">Clear</title>
@@ -50,7 +50,7 @@
 					<img alt="File preview" src="#item1.png">
 						<div class="sd-context-btn sd-context-btn--negative sd-file__remove-file-button">
 							<span class="sd-hidden">Remove this file</span>
-							<svg aria-label="Remove this file" class="sv-svg-icon" role="img">
+							<svg class="sv-svg-icon" role="img">
 								<use xlink:href="#icon-delete" class="">
 								</use>
 								<title class="">Remove this file</title>
