--- a/tests/markup/snapshots/file-mob2.snap.html
+++ b/tests/markup/snapshots/file-mob2.snap.html
@@ -10,7 +10,7 @@
 					<div class="sv-action" id="sv-file-choose-file">
 						<div class="sv-action__content">
 							<label aria-label="Select File" class="sd-action sd-file__choose-btn sd-file__choose-btn--text" for="testid0i" tabindex="0">
-								<svg aria-label="Select File" class="sv-svg-icon" role="img">
+								<svg class="sv-svg-icon" role="img">
 									<use xlink:href="#icon-choosefile" class="">
 									</use>
 									<title class="">Select File</title>
@@ -22,7 +22,7 @@
 					<div class="sv-action sv-action--hidden" id="sv-file-start-camera">
 						<div class="sv-action__content">
 							<button class="sd-action" role="button" tabindex="0" title="Take Photo" type="button">
-								<svg aria-label="Take Photo" class="sd-action__icon sv-svg-icon" role="img">
+								<svg class="sd-action__icon sv-svg-icon" role="img">
 									<use xlink:href="#icon-takepicture_24x24" class="">
 									</use>
 									<title class="">Take Photo</title>
@@ -34,7 +34,7 @@
 					<div class="sv-action sv-action--hidden" id="sv-file-clean">
 						<div class="sv-action__content">
 							<button class="sd-context-btn sd-context-btn--negative" role="button" tabindex="0" title="Clear" type="button">
-								<svg aria-label="Clear" class="sd-action__icon sv-svg-icon" role="img">
+								<svg class="sd-action__icon sv-svg-icon" role="img">
 									<use xlink:href="#icon-clear" class="">
 									</use>
 									<title class="">Clear</title>
