--- a/tests/markup/snapshots/file-modern-png.snap.html
+++ b/tests/markup/snapshots/file-modern-png.snap.html
@@ -20,7 +20,7 @@
 					<img alt="File preview" src="#item1.png">
 						<div>
 							<span class="sv-hidden">Remove this file</span>
-							<svg aria-label="Remove this file" class="sv-file__remove-svg sv-svg-icon" role="img">
+							<svg class="sv-file__remove-svg sv-svg-icon" role="img">
 								<use xlink:href="#icon-removefile" class="">
 								</use>
 								<title class="">Remove this file</title>
