--- a/tests/markup/snapshots/matrixdynamic-default.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-default.snap.html
@@ -26,8 +26,8 @@
 										<div class="sv_q_dropdown__value">
 											<input aria-controls="testid0row1cell0i_list" aria-expanded="false" aria-label="Column 1" autocomplete="off" class="sv_q_dropdown__filter-string-input" id="testid0row1cell0i_0" inputmode="text" placeholder="Select..." role="combobox" type="text">
 										</div>
-										<div class="sv_q_dropdown_clean-button" style="display:none;">
-											<svg aria-label="Clear" class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
+										<div class="sv_q_dropdown_clean-button" style="display:none;" tabindex="0">
+											<svg class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
 												<use xlink:href="#icon-clear_16x16" class="">
 												</use>
 												<title class="">Clear</title>
@@ -65,8 +65,8 @@
 										<div class="sv_q_dropdown__value">
 											<input aria-controls="testid0row1cell1i_list" aria-expanded="false" aria-label="Column 2" autocomplete="off" class="sv_q_dropdown__filter-string-input" id="testid0row1cell1i_0" inputmode="text" placeholder="Select..." role="combobox" type="text">
 										</div>
-										<div class="sv_q_dropdown_clean-button" style="display:none;">
-											<svg aria-label="Clear" class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
+										<div class="sv_q_dropdown_clean-button" style="display:none;" tabindex="0">
+											<svg class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
 												<use xlink:href="#icon-clear_16x16" class="">
 												</use>
 												<title class="">Clear</title>
@@ -104,8 +104,8 @@
 										<div class="sv_q_dropdown__value">
 											<input aria-controls="testid0row1cell2i_list" aria-expanded="false" aria-label="Column 3" autocomplete="off" class="sv_q_dropdown__filter-string-input" id="testid0row1cell2i_0" inputmode="text" placeholder="Select..." role="combobox" type="text">
 										</div>
-										<div class="sv_q_dropdown_clean-button" style="display:none;">
-											<svg aria-label="Clear" class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
+										<div class="sv_q_dropdown_clean-button" style="display:none;" tabindex="0">
+											<svg class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
 												<use xlink:href="#icon-clear_16x16" class="">
 												</use>
 												<title class="">Clear</title>
@@ -158,8 +158,8 @@
 										<div class="sv_q_dropdown__value">
 											<input aria-controls="testid0row3cell0i_list" aria-expanded="false" aria-label="Column 1" autocomplete="off" class="sv_q_dropdown__filter-string-input" id="testid0row3cell0i_0" inputmode="text" placeholder="Select..." role="combobox" type="text">
 										</div>
-										<div class="sv_q_dropdown_clean-button" style="display:none;">
-											<svg aria-label="Clear" class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
+										<div class="sv_q_dropdown_clean-button" style="display:none;" tabindex="0">
+											<svg class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
 												<use xlink:href="#icon-clear_16x16" class="">
 												</use>
 												<title class="">Clear</title>
@@ -197,8 +197,8 @@
 										<div class="sv_q_dropdown__value">
 											<input aria-controls="testid0row3cell1i_list" aria-expanded="false" aria-label="Column 2" autocomplete="off" class="sv_q_dropdown__filter-string-input" id="testid0row3cell1i_0" inputmode="text" placeholder="Select..." role="combobox" type="text">
 										</div>
-										<div class="sv_q_dropdown_clean-button" style="display:none;">
-											<svg aria-label="Clear" class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
+										<div class="sv_q_dropdown_clean-button" style="display:none;" tabindex="0">
+											<svg class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
 												<use xlink:href="#icon-clear_16x16" class="">
 												</use>
 												<title class="">Clear</title>
@@ -236,8 +236,8 @@
 										<div class="sv_q_dropdown__value">
 											<input aria-controls="testid0row3cell2i_list" aria-expanded="false" aria-label="Column 3" autocomplete="off" class="sv_q_dropdown__filter-string-input" id="testid0row3cell2i_0" inputmode="text" placeholder="Select..." role="combobox" type="text">
 										</div>
-										<div class="sv_q_dropdown_clean-button" style="display:none;">
-											<svg aria-label="Clear" class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
+										<div class="sv_q_dropdown_clean-button" style="display:none;" tabindex="0">
+											<svg class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
 												<use xlink:href="#icon-clear_16x16" class="">
 												</use>
 												<title class="">Clear</title>
