--- a/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
@@ -26,8 +26,8 @@
 										<div class="sd-dropdown__value">
 											<input aria-controls="testid0row1cell0i_list" aria-expanded="false" aria-label="Column 1" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row1cell0i_0" inputmode="text" placeholder="Select..." role="combobox" type="text">
 										</div>
-										<div class="sd-dropdown_clean-button" style="display:none;">
-											<svg aria-label="Clear" class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
+										<div class="sd-dropdown_clean-button" style="display:none;" tabindex="0">
+											<svg class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
 												<use xlink:href="#icon-clear" class="">
 												</use>
 												<title class="">Clear</title>
@@ -53,7 +53,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="sd-dropdown_chevron-button">
+									<div aria-hidden="true" class="sd-dropdown_chevron-button">
 										<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img">
 											<use xlink:href="#icon-chevron" class="">
 											</use>
@@ -71,8 +71,8 @@
 										<div class="sd-dropdown__value">
 											<input aria-controls="testid0row1cell1i_list" aria-expanded="false" aria-label="Column 2" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row1cell1i_0" inputmode="text" placeholder="Select..." role="combobox" type="text">
 										</div>
-										<div class="sd-dropdown_clean-button" style="display:none;">
-											<svg aria-label="Clear" class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
+										<div class="sd-dropdown_clean-button" style="display:none;" tabindex="0">
+											<svg class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
 												<use xlink:href="#icon-clear" class="">
 												</use>
 												<title class="">Clear</title>
@@ -98,7 +98,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="sd-dropdown_chevron-button">
+									<div aria-hidden="true" class="sd-dropdown_chevron-button">
 										<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img">
 											<use xlink:href="#icon-chevron" class="">
 											</use>
@@ -116,8 +116,8 @@
 										<div class="sd-dropdown__value">
 											<input aria-controls="testid0row1cell2i_list" aria-expanded="false" aria-label="Column 3" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row1cell2i_0" inputmode="text" placeholder="Select..." role="combobox" type="text">
 										</div>
-										<div class="sd-dropdown_clean-button" style="display:none;">
-											<svg aria-label="Clear" class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
+										<div class="sd-dropdown_clean-button" style="display:none;" tabindex="0">
+											<svg class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
 												<use xlink:href="#icon-clear" class="">
 												</use>
 												<title class="">Clear</title>
@@ -143,7 +143,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="sd-dropdown_chevron-button">
+									<div aria-hidden="true" class="sd-dropdown_chevron-button">
 										<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img">
 											<use xlink:href="#icon-chevron" class="">
 											</use>
@@ -158,7 +158,7 @@
 							<div class="sv-action" id="remove-row">
 								<div class="sv-action__content">
 									<button class="sd-action sd-action--icon sd-action--negative sd-matrixdynamic__btn sd-matrixdynamic__remove-btn" role="button" tabindex="0" title="Remove" type="button">
-										<svg aria-label="Remove" class="sd-action__icon sv-svg-icon" role="img">
+										<svg class="sd-action__icon sv-svg-icon" role="img">
 											<use xlink:href="#icon-delete" class="">
 											</use>
 											<title class="">Remove</title>
@@ -178,8 +178,8 @@
 										<div class="sd-dropdown__value">
 											<input aria-controls="testid0row3cell0i_list" aria-expanded="false" aria-label="Column 1" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row3cell0i_0" inputmode="text" placeholder="Select..." role="combobox" type="text">
 										</div>
-										<div class="sd-dropdown_clean-button" style="display:none;">
-											<svg aria-label="Clear" class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
+										<div class="sd-dropdown_clean-button" style="display:none;" tabindex="0">
+											<svg class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
 												<use xlink:href="#icon-clear" class="">
 												</use>
 												<title class="">Clear</title>
@@ -205,7 +205,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="sd-dropdown_chevron-button">
+									<div aria-hidden="true" class="sd-dropdown_chevron-button">
 										<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img">
 											<use xlink:href="#icon-chevron" class="">
 											</use>
@@ -223,8 +223,8 @@
 										<div class="sd-dropdown__value">
 											<input aria-controls="testid0row3cell1i_list" aria-expanded="false" aria-label="Column 2" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row3cell1i_0" inputmode="text" placeholder="Select..." role="combobox" type="text">
 										</div>
-										<div class="sd-dropdown_clean-button" style="display:none;">
-											<svg aria-label="Clear" class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
+										<div class="sd-dropdown_clean-button" style="display:none;" tabindex="0">
+											<svg class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
 												<use xlink:href="#icon-clear" class="">
 												</use>
 												<title class="">Clear</title>
@@ -250,7 +250,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="sd-dropdown_chevron-button">
+									<div aria-hidden="true" class="sd-dropdown_chevron-button">
 										<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img">
 											<use xlink:href="#icon-chevron" class="">
 											</use>
@@ -268,8 +268,8 @@
 										<div class="sd-dropdown__value">
 											<input aria-controls="testid0row3cell2i_list" aria-expanded="false" aria-label="Column 3" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row3cell2i_0" inputmode="text" placeholder="Select..." role="combobox" type="text">
 										</div>
-										<div class="sd-dropdown_clean-button" style="display:none;">
-											<svg aria-label="Clear" class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
+										<div class="sd-dropdown_clean-button" style="display:none;" tabindex="0">
+											<svg class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
 												<use xlink:href="#icon-clear" class="">
 												</use>
 												<title class="">Clear</title>
@@ -295,7 +295,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="sd-dropdown_chevron-button">
+									<div aria-hidden="true" class="sd-dropdown_chevron-button">
 										<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img">
 											<use xlink:href="#icon-chevron" class="">
 											</use>
@@ -310,7 +310,7 @@
 							<div class="sv-action" id="remove-row">
 								<div class="sv-action__content">
 									<button class="sd-action sd-action--icon sd-action--negative sd-matrixdynamic__btn sd-matrixdynamic__remove-btn" role="button" tabindex="0" title="Remove" type="button">
-										<svg aria-label="Remove" class="sd-action__icon sv-svg-icon" role="img">
+										<svg class="sd-action__icon sv-svg-icon" role="img">
 											<use xlink:href="#icon-delete" class="">
 											</use>
 											<title class="">Remove</title>
