--- a/tests/markup/snapshots/paneldynamic-no-footer-2.snap.html
+++ b/tests/markup/snapshots/paneldynamic-no-footer-2.snap.html
@@ -27,7 +27,7 @@
 								<div class="sv-action sv-action--hidden sv-dots">
 									<div class="sv-action__content">
 										<button class="sv-action-bar-item sv-action-bar-item--icon sv-dots__item" role="button" tabindex="0" title="More" type="button">
-											<svg aria-label="More" class="sv-action-bar-item__icon sv-svg-icon" role="img" style="height:24px; width:24px;">
+											<svg class="sv-action-bar-item__icon sv-svg-icon" role="img" style="height:24px; width:24px;">
 												<use xlink:href="#icon-more" class="">
 												</use>
 												<title class="">More</title>
