--- a/tests/markup/snapshots/paneldynamic-progress-tab-right.snap.html
+++ b/tests/markup/snapshots/paneldynamic-progress-tab-right.snap.html
@@ -16,7 +16,7 @@
 	<div class="sv-action sv-action--hidden sv-dots">
 		<div class="sv-action__content">
 			<button class="sd-tab-item sd-tab-item--icon sv-dots__item" role="button" tabindex="0" title="More" type="button">
-				<svg aria-label="More" class="sd-tab-item__icon sv-svg-icon" role="img" style="height:24px; width:24px;">
+				<svg class="sd-tab-item__icon sv-svg-icon" role="img" style="height:24px; width:24px;">
 					<use xlink:href="#icon-more" class="">
 					</use>
 					<title class="">More</title>
