--- a/tests/markup/snapshots/rating-as-dropdown-readonly-with-value.snap.html
+++ b/tests/markup/snapshots/rating-as-dropdown-readonly-with-value.snap.html
@@ -3,7 +3,7 @@
 		<div class="sd-dropdown sd-input sd-input--disabled" disabled="" id="testid0i">
 			<div>3</div>
 		</div>
-		<div class="sd-dropdown_chevron-button">
+		<div aria-hidden="true" class="sd-dropdown_chevron-button">
 			<svg class="sd-dropdown_chevron-button-svg sv-svg-icon" role="img">
 				<use xlink:href="#icon-chevron" class="">
 				</use>
