--- a/tests/markup/snapshots/rating-smileys.snap.html
+++ b/tests/markup/snapshots/rating-smileys.snap.html
@@ -4,7 +4,7 @@
 		</legend>
 		<label class="sv_q_rating__item-smiley">
 			<input aria-invalid="false" aria-label="Question title" aria-required="false" class="sv-visuallyhidden" id="testid0i_0" name="name" type="radio" value="1">
-			<svg aria-label="1" class="sv-svg-icon" role="img">
+			<svg class="sv-svg-icon" role="img">
 				<use xlink:href="#icon-not-good" class="">
 				</use>
 				<title class="">1</title>
@@ -12,7 +12,7 @@
 		</label>
 		<label class="sv_q_rating__item-smiley">
 			<input aria-invalid="false" aria-label="Question title" aria-required="false" class="sv-visuallyhidden" id="testid0i_1" name="name" type="radio" value="2">
-			<svg aria-label="2" class="sv-svg-icon" role="img">
+			<svg class="sv-svg-icon" role="img">
 				<use xlink:href="#icon-very-good" class="">
 				</use>
 				<title class="">2</title>
