--- a/tests/markup/snapshots/tagbox-without-search.snap.html
+++ b/tests/markup/snapshots/tagbox-without-search.snap.html
@@ -8,8 +8,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="sv_q_dropdown_clean-button sv_q_tagbox_clean-button" style="display:none;">
-				<svg aria-label="Clear" class="sv_q_dropdown_clean-button-svg sv_q_tagbox_clean-button-svg sv-svg-icon" role="img">
+			<div class="sv_q_dropdown_clean-button sv_q_tagbox_clean-button" style="display:none;" tabindex="0">
+				<svg class="sv_q_dropdown_clean-button-svg sv_q_tagbox_clean-button-svg sv-svg-icon" role="img">
 					<use xlink:href="#icon-clear_16x16" class="">
 					</use>
 					<title class="">Clear</title>
