#7305 Autocomplete doesn't work correctly in dropdown Fixes #7305

--- a/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
@@ -24,7 +24,7 @@
 								<div class="sv-dropdown_select-wrapper">
 									<div aria-controls="testid0row1cell0i_list" aria-expanded="false" aria-invalid="false" aria-label="Column 1" aria-required="false" class="sd-dropdown sd-dropdown--empty sd-input" id="testid0row1cell0i" role="combobox">
 										<div class="sd-dropdown__value">
-											<input aria-controls="testid0row1cell0i_list" aria-expanded="false" aria-label="Column 1" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row1cell0i_0" inputmode="text" placeholder="Select..." role="combobox" type="text">
+											<input aria-controls="testid0row1cell0i_list" aria-expanded="false" aria-label="Column 1" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row1cell0i_0" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
 										</div>
 										<div class="sd-dropdown_clean-button" style="display:none;">
 											<svg aria-label="Clear" class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
@@ -69,7 +69,7 @@
 								<div class="sv-dropdown_select-wrapper">
 									<div aria-controls="testid0row1cell1i_list" aria-expanded="false" aria-invalid="false" aria-label="Column 2" aria-required="false" class="sd-dropdown sd-dropdown--empty sd-input" id="testid0row1cell1i" role="combobox">
 										<div class="sd-dropdown__value">
-											<input aria-controls="testid0row1cell1i_list" aria-expanded="false" aria-label="Column 2" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row1cell1i_0" inputmode="text" placeholder="Select..." role="combobox" type="text">
+											<input aria-controls="testid0row1cell1i_list" aria-expanded="false" aria-label="Column 2" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row1cell1i_0" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
 										</div>
 										<div class="sd-dropdown_clean-button" style="display:none;">
 											<svg aria-label="Clear" class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
@@ -114,7 +114,7 @@
 								<div class="sv-dropdown_select-wrapper">
 									<div aria-controls="testid0row1cell2i_list" aria-expanded="false" aria-invalid="false" aria-label="Column 3" aria-required="false" class="sd-dropdown sd-dropdown--empty sd-input" id="testid0row1cell2i" role="combobox">
 										<div class="sd-dropdown__value">
-											<input aria-controls="testid0row1cell2i_list" aria-expanded="false" aria-label="Column 3" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row1cell2i_0" inputmode="text" placeholder="Select..." role="combobox" type="text">
+											<input aria-controls="testid0row1cell2i_list" aria-expanded="false" aria-label="Column 3" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row1cell2i_0" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
 										</div>
 										<div class="sd-dropdown_clean-button" style="display:none;">
 											<svg aria-label="Clear" class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
@@ -176,7 +176,7 @@
 								<div class="sv-dropdown_select-wrapper">
 									<div aria-controls="testid0row3cell0i_list" aria-expanded="false" aria-invalid="false" aria-label="Column 1" aria-required="false" class="sd-dropdown sd-dropdown--empty sd-input" id="testid0row3cell0i" role="combobox">
 										<div class="sd-dropdown__value">
-											<input aria-controls="testid0row3cell0i_list" aria-expanded="false" aria-label="Column 1" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row3cell0i_0" inputmode="text" placeholder="Select..." role="combobox" type="text">
+											<input aria-controls="testid0row3cell0i_list" aria-expanded="false" aria-label="Column 1" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row3cell0i_0" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
 										</div>
 										<div class="sd-dropdown_clean-button" style="display:none;">
 											<svg aria-label="Clear" class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
@@ -221,7 +221,7 @@
 								<div class="sv-dropdown_select-wrapper">
 									<div aria-controls="testid0row3cell1i_list" aria-expanded="false" aria-invalid="false" aria-label="Column 2" aria-required="false" class="sd-dropdown sd-dropdown--empty sd-input" id="testid0row3cell1i" role="combobox">
 										<div class="sd-dropdown__value">
-											<input aria-controls="testid0row3cell1i_list" aria-expanded="false" aria-label="Column 2" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row3cell1i_0" inputmode="text" placeholder="Select..." role="combobox" type="text">
+											<input aria-controls="testid0row3cell1i_list" aria-expanded="false" aria-label="Column 2" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row3cell1i_0" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
 										</div>
 										<div class="sd-dropdown_clean-button" style="display:none;">
 											<svg aria-label="Clear" class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
@@ -266,7 +266,7 @@
 								<div class="sv-dropdown_select-wrapper">
 									<div aria-controls="testid0row3cell2i_list" aria-expanded="false" aria-invalid="false" aria-label="Column 3" aria-required="false" class="sd-dropdown sd-dropdown--empty sd-input" id="testid0row3cell2i" role="combobox">
 										<div class="sd-dropdown__value">
-											<input aria-controls="testid0row3cell2i_list" aria-expanded="false" aria-label="Column 3" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row3cell2i_0" inputmode="text" placeholder="Select..." role="combobox" type="text">
+											<input aria-controls="testid0row3cell2i_list" aria-expanded="false" aria-label="Column 3" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row3cell2i_0" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
 										</div>
 										<div class="sd-dropdown_clean-button" style="display:none;">
 											<svg aria-label="Clear" class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
