--- a/tests/markup/snapshots/matrixdynamic-totals.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-totals.snap.html
@@ -18,7 +18,7 @@
 								<div class="sv_select_wrapper">
 									<div aria-controls="testid0row1cell0i_list" aria-expanded="false" aria-invalid="false" aria-label="Column 1" aria-required="false" class="sv_q_dropdown_control" role="combobox">
 										<div class="sv_q_dropdown__value">
-											<input aria-controls="testid0row1cell0i_list" aria-expanded="false" aria-label="Column 1" autocomplete="off" class="sv_q_dropdown__filter-string-input" inputmode="text" placeholder="Select..." role="combobox" type="text">
+											<input aria-controls="testid0row1cell0i_list" aria-expanded="false" aria-label="Column 1" autocomplete="off" class="sv_q_dropdown__filter-string-input" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
 										</div>
 										<div class="sv_q_dropdown_clean-button" style="display:none;">
 											<svg aria-label="Clear" class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
@@ -72,7 +72,7 @@
 								<div class="sv_select_wrapper">
 									<div aria-controls="testid0row3cell0i_list" aria-expanded="false" aria-invalid="false" aria-label="Column 1" aria-required="false" class="sv_q_dropdown_control" role="combobox">
 										<div class="sv_q_dropdown__value">
-											<input aria-controls="testid0row3cell0i_list" aria-expanded="false" aria-label="Column 1" autocomplete="off" class="sv_q_dropdown__filter-string-input" inputmode="text" placeholder="Select..." role="combobox" type="text">
+											<input aria-controls="testid0row3cell0i_list" aria-expanded="false" aria-label="Column 1" autocomplete="off" class="sv_q_dropdown__filter-string-input" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
 										</div>
 										<div class="sv_q_dropdown_clean-button" style="display:none;">
 											<svg aria-label="Clear" class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
