--- a/tests/markup/snapshots/tagbox-selected.snap.html
+++ b/tests/markup/snapshots/tagbox-selected.snap.html
@@ -15,7 +15,7 @@
 				</div>
 				<div class="sv_q_tagbox__hint">
 					<div class="sv_q_tagbox__hint-suffix-wrapper">
-						<input aria-controls="testid0i_list" aria-expanded="false" aria-label="Question title" autocomplete="off" class="sv_q_dropdown__filter-string-input sv_q_tagbox__filter-string-input" inputmode="text" placeholder="" role="combobox" size="1" type="text">
+						<input aria-controls="testid0i_list" aria-expanded="false" aria-label="Question title" autocomplete="off" class="sv_q_dropdown__filter-string-input sv_q_tagbox__filter-string-input" inputmode="text" placeholder="" readonly="" role="combobox" size="1" type="text">
 					</div>
 				</div>
 			</div>
