work for the https://github.com/surveyjs/service/issues/1586

--- a/tests/markup/snapshots/matrix-modern.snap.html
+++ b/tests/markup/snapshots/matrix-modern.snap.html
@@ -21,7 +21,7 @@
 					</td>
 					<td class="sv-matrix__cell sv-table__cell" data-responsive-title="col_1">
 						<label class="sv-item sv-matrix__label sv-radio sv-radio--allowhover">
-							<input aria-invalid="false" aria-label="col_1" aria-required="false" class="sv-item__control sv-radio__control sv-visuallyhidden" id="testid0i_row_1_0" name="testid0_row_1" type="radio" value="col_1">
+							<input aria-invalid="false" aria-label="row row_1, column col_1" aria-required="false" class="sv-item__control sv-radio__control sv-visuallyhidden" id="testid0i_row_1_0" name="testid0_row_1" type="radio" value="col_1">
 							<span class="sv-item__decorator sv-radio__decorator">
 								<svg class="sv-item__svg sv-radio__svg">
 									<use xlink:href="#icon-modernradio" class="">
@@ -35,7 +35,7 @@
 					</td>
 					<td class="sv-matrix__cell sv-table__cell" data-responsive-title="col_2">
 						<label class="sv-item sv-matrix__label sv-radio sv-radio--allowhover">
-							<input aria-invalid="false" aria-label="col_2" aria-required="false" class="sv-item__control sv-radio__control sv-visuallyhidden" id="testid0i_row_1_1" name="testid0_row_1" type="radio" value="col_2">
+							<input aria-invalid="false" aria-label="row row_1, column col_2" aria-required="false" class="sv-item__control sv-radio__control sv-visuallyhidden" id="testid0i_row_1_1" name="testid0_row_1" type="radio" value="col_2">
 							<span class="sv-item__decorator sv-radio__decorator">
 								<svg class="sv-item__svg sv-radio__svg">
 									<use xlink:href="#icon-modernradio" class="">
@@ -54,7 +54,7 @@
 					</td>
 					<td class="sv-matrix__cell sv-table__cell" data-responsive-title="col_1">
 						<label class="sv-item sv-matrix__label sv-radio sv-radio--allowhover">
-							<input aria-invalid="false" aria-label="col_1" aria-required="false" class="sv-item__control sv-radio__control sv-visuallyhidden" id="testid0i_row_2_0" name="testid0_row_2" type="radio" value="col_1">
+							<input aria-invalid="false" aria-label="row row_2, column col_1" aria-required="false" class="sv-item__control sv-radio__control sv-visuallyhidden" id="testid0i_row_2_0" name="testid0_row_2" type="radio" value="col_1">
 							<span class="sv-item__decorator sv-radio__decorator">
 								<svg class="sv-item__svg sv-radio__svg">
 									<use xlink:href="#icon-modernradio" class="">
@@ -68,7 +68,7 @@
 					</td>
 					<td class="sv-matrix__cell sv-table__cell" data-responsive-title="col_2">
 						<label class="sv-item sv-matrix__label sv-radio sv-radio--allowhover">
-							<input aria-invalid="false" aria-label="col_2" aria-required="false" class="sv-item__control sv-radio__control sv-visuallyhidden" id="testid0i_row_2_1" name="testid0_row_2" type="radio" value="col_2">
+							<input aria-invalid="false" aria-label="row row_2, column col_2" aria-required="false" class="sv-item__control sv-radio__control sv-visuallyhidden" id="testid0i_row_2_1" name="testid0_row_2" type="radio" value="col_2">
 							<span class="sv-item__decorator sv-radio__decorator">
 								<svg class="sv-item__svg sv-radio__svg">
 									<use xlink:href="#icon-modernradio" class="">
