--- a/tests/markup/snapshots/matrix-widths.snap.html
+++ b/tests/markup/snapshots/matrix-widths.snap.html
@@ -21,7 +21,7 @@
 					</td>
 					<td class="sv_q_m_cell" data-responsive-title="col_1">
 						<label class="sv_q_m_label">
-							<input aria-invalid="false" aria-label="col_1" aria-required="false" id="testid0i_row_1_0" name="testid0_row_1" type="radio" value="col_1">
+							<input aria-invalid="false" aria-label="row row_1, column col_1" aria-required="false" id="testid0i_row_1_0" name="testid0_row_1" type="radio" value="col_1">
 							<span>
 							</span>
 							<span class="sv-hidden" style="display:none;">
@@ -31,7 +31,7 @@
 					</td>
 					<td class="sv_q_m_cell" data-responsive-title="col_2">
 						<label class="sv_q_m_label">
-							<input aria-invalid="false" aria-label="col_2" aria-required="false" id="testid0i_row_1_1" name="testid0_row_1" type="radio" value="col_2">
+							<input aria-invalid="false" aria-label="row row_1, column col_2" aria-required="false" id="testid0i_row_1_1" name="testid0_row_1" type="radio" value="col_2">
 							<span>
 							</span>
 							<span class="sv-hidden" style="display:none;">
@@ -46,7 +46,7 @@
 					</td>
 					<td class="sv_q_m_cell" data-responsive-title="col_1">
 						<label class="sv_q_m_label">
-							<input aria-invalid="false" aria-label="col_1" aria-required="false" id="testid0i_row_2_0" name="testid0_row_2" type="radio" value="col_1">
+							<input aria-invalid="false" aria-label="row row_2, column col_1" aria-required="false" id="testid0i_row_2_0" name="testid0_row_2" type="radio" value="col_1">
 							<span>
 							</span>
 							<span class="sv-hidden" style="display:none;">
@@ -56,7 +56,7 @@
 					</td>
 					<td class="sv_q_m_cell" data-responsive-title="col_2">
 						<label class="sv_q_m_label">
-							<input aria-invalid="false" aria-label="col_2" aria-required="false" id="testid0i_row_2_1" name="testid0_row_2" type="radio" value="col_2">
+							<input aria-invalid="false" aria-label="row row_2, column col_2" aria-required="false" id="testid0i_row_2_1" name="testid0_row_2" type="radio" value="col_2">
 							<span>
 							</span>
 							<span class="sv-hidden" style="display:none;">
