work for the https://github.com/surveyjs/survey-library/issues/7274

--- a/tests/markup/snapshots/martix-celltype-text-a11y.snap.html
+++ b/tests/markup/snapshots/martix-celltype-text-a11y.snap.html
@@ -16,7 +16,7 @@
 				</td>
 				<td class="sv_matrix_cell" colspan="1" data-responsive-title="Number of people" title="Number of people">
 					<div>
-						<input aria-invalid="false" aria-label="Number of people" aria-required="false" autocomplete="" class="sv_q_text_root" id="testid0row1cell1i" min="0" placeholder="" step="any" type="number">
+						<input aria-invalid="false" aria-label="row Age 0-4, column Number of people" aria-required="false" autocomplete="" class="sv_q_text_root" id="testid0row1cell1i" min="0" placeholder="" step="any" type="number">
 					</div>
 				</td>
 			</tr>
@@ -26,7 +26,7 @@
 				</td>
 				<td class="sv_matrix_cell" colspan="1" data-responsive-title="Number of people" title="Number of people">
 					<div>
-						<input aria-invalid="false" aria-label="Number of people" aria-required="false" autocomplete="" class="sv_q_text_root" id="testid0row3cell1i" min="0" placeholder="" step="any" type="number">
+						<input aria-invalid="false" aria-label="row Age 5-11, column Number of people" aria-required="false" autocomplete="" class="sv_q_text_root" id="testid0row3cell1i" min="0" placeholder="" step="any" type="number">
 					</div>
 				</td>
 			</tr>
@@ -36,7 +36,7 @@
 				</td>
 				<td class="sv_matrix_cell" colspan="1" data-responsive-title="Number of people" title="Number of people">
 					<div>
-						<input aria-invalid="false" aria-label="Number of people" aria-required="false" autocomplete="" class="sv_q_text_root" id="testid0row5cell1i" min="0" placeholder="" step="any" type="number">
+						<input aria-invalid="false" aria-label="row Age 12-15, column Number of people" aria-required="false" autocomplete="" class="sv_q_text_root" id="testid0row5cell1i" min="0" placeholder="" step="any" type="number">
 					</div>
 				</td>
 			</tr>
@@ -46,7 +46,7 @@
 				</td>
 				<td class="sv_matrix_cell" colspan="1" data-responsive-title="Number of people" title="Number of people">
 					<div>
-						<input aria-invalid="false" aria-label="Number of people" aria-required="false" autocomplete="" class="sv_q_text_root" id="testid0row7cell1i" min="0" placeholder="" step="any" type="number">
+						<input aria-invalid="false" aria-label="row Age 16+, column Number of people" aria-required="false" autocomplete="" class="sv_q_text_root" id="testid0row7cell1i" min="0" placeholder="" step="any" type="number">
 					</div>
 				</td>
 			</tr>
