--- a/tests/markup/snapshots/matrixdropdown-cell-errors-bottom.snap.html
+++ b/tests/markup/snapshots/matrixdropdown-cell-errors-bottom.snap.html
@@ -18,7 +18,7 @@
 				</td>
 				<td class="sd-question--error sd-table__cell" colspan="1" data-responsive-title="col1" title="col1">
 					<div class="sd-table__question-wrapper">
-						<input aria-describedby="testid0row0cell1_errors" aria-invalid="true" aria-label="col1" aria-required="true" autocomplete="" class="sd-input sd-input--error sd-text" id="testid0row0cell1i" placeholder="" type="text">
+						<input aria-describedby="testid0row0cell1_errors" aria-invalid="true" aria-label="row row1, column col1" aria-required="true" autocomplete="" class="sd-input sd-input--error sd-text" id="testid0row0cell1i" placeholder="" type="text">
 					</div>
 				</td>
 			</tr>
