--- a/tests/markup/snapshots/matrixdropdown-vertical.snap.html
+++ b/tests/markup/snapshots/matrixdropdown-vertical.snap.html
@@ -20,12 +20,12 @@
 				</td>
 				<td class="sd-table__cell" colspan="1" data-responsive-title="" title="">
 					<div class="sd-table__question-wrapper">
-						<input aria-invalid="false" aria-label="" aria-required="false" autocomplete="" class="sd-input sd-text" id="testid0row1cell1i" placeholder="" type="text">
+						<input aria-invalid="false" aria-label="row Row 1, column " aria-required="false" autocomplete="" class="sd-input sd-text" id="testid0row1cell1i" placeholder="" type="text">
 					</div>
 				</td>
 				<td class="sd-table__cell" colspan="1" data-responsive-title="" title="">
 					<div class="sd-table__question-wrapper">
-						<input aria-invalid="false" aria-label="" aria-required="false" autocomplete="" class="sd-input sd-text" id="testid0row1cell2i" placeholder="" type="text">
+						<input aria-invalid="false" aria-label="row Row 2, column " aria-required="false" autocomplete="" class="sd-input sd-text" id="testid0row1cell2i" placeholder="" type="text">
 					</div>
 				</td>
 			</tr>
@@ -36,12 +36,12 @@
 				</td>
 				<td class="sd-table__cell" colspan="1" data-responsive-title="" title="">
 					<div class="sd-table__question-wrapper">
-						<input aria-invalid="false" aria-label="" aria-required="false" autocomplete="" class="sd-input sd-text" id="testid0row3cell1i" placeholder="" type="text">
+						<input aria-invalid="false" aria-label="row Row 1, column " aria-required="false" autocomplete="" class="sd-input sd-text" id="testid0row3cell1i" placeholder="" type="text">
 					</div>
 				</td>
 				<td class="sd-table__cell" colspan="1" data-responsive-title="" title="">
 					<div class="sd-table__question-wrapper">
-						<input aria-invalid="false" aria-label="" aria-required="false" autocomplete="" class="sd-input sd-text" id="testid0row3cell2i" placeholder="" type="text">
+						<input aria-invalid="false" aria-label="row Row 2, column " aria-required="false" autocomplete="" class="sd-input sd-text" id="testid0row3cell2i" placeholder="" type="text">
 					</div>
 				</td>
 			</tr>
